resources/scss/components/_accordion.scss
/* 
    Figure out how to do this with tailwind breakpoints 
    Need to specifically target max width so the column-span width can override this value
    max-mt:w-full and max-[780px]:w-full aren't working
*/
section.accordion {
    @media (width <= 780px) {
        @apply w-full;
    }
}

ul.accordion.enabled {
    @apply border-t border-gray-200 p-0 mb-4 ml-0 relative grid grid-cols-1 w-full;

    transition: 0.3s ease all;

    & > li {
        @apply border-b border-gray-200 w-full focus-within:outline outline-2 outline-green focus-within:border-b-0 focus-within:rounded-sm;

        transition: 0.3s ease all;

        &:last-child {
            @apply border-b;
        }

        > a {
            @apply relative block p-4 pl-8 font-bold border-b-0 no-underline outline-0;

            cursor: pointer;
            user-select: none;

            /* Open symbol */
            & span::before {
                @apply absolute left-0 pl-4 top-0 pt-4;

                content: '+';
            }
        }

        & a:focus {
            @apply outline outline-0;
        }

        /* Close symbol */
        &.open > a span::before {
            content: '\2013';
        }

        /* Content area */
        > .fold {
            @apply p-4 pt-0 pl-8 border-t-0;

            transition: 0.3s ease all;

            > * {
                @apply mt-0;
            }
        }
    }

    > * {
        @apply overflow-hidden p-0 m-0;

        transition: 0.3s ease all;
    }
}

